# SupportDesk

./: .gitignore  README.md  build_custom.sh  deploy.env  deploy_server.sh
.github/workflows/: build.yml
client-deploy/: install.ps1  install.sh
flutter/: pubspec.yaml
flutter/lib/: common.dart  support_request.dart
flutter/lib/desktop/pages/: desktop_home_page.dart
flutter/lib/mobile/pages/: connection_page.dart
libs/scrap/: $null  build.rs
libs/scrap/src/bindings/: aom_ffi.h
scripts/: build-windows-client.ps1
src/server/: connection.rs
support-server/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  setup-server.sh
support-server/client-deploy/: install.ps1  install.sh
support-server/installer/: build.ps1  build.sh  windows.nsi
support-server/installer/app/data/flutter_assets/: NOTICES.Z
support-server/src/: main.rs  routes.rs  sessions.rs  ws.rs
support-server/static/: dashboard.html  request.html  widget.js
