[workspace]

[package]
name = "rustdesk-support"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustdesk-support"
path = "src/main.rs"

[dependencies]
axum          = { version = "0.7", features = ["ws", "macros"] }
tokio         = { version = "1",   features = ["full"] }
tower-http    = { version = "0.5", features = ["cors", "fs", "trace"] }
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
uuid          = { version = "=1.6.1", features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }
futures       = "0.1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
getrandom     = "=0.2.15"
lettre        = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "hostname", "builder"] }
